// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner renders 1`] = `
<div
  className="sc-eCqeQn kxHCOc"
>
  <div
    className="sc-jdzWJC bpJEZY"
  >
    <div
      className="sc-iaUDOe eVEmEU"
    >
      <div
        className="sc-dOaiCS dYaHgA"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-jaIaHg bboIQW"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-fCdBJp qBpuG"
  />
</div>
`;

exports[`Banner renders in mobile mode 1`] = `
<div
  className="sc-eCqeQn cYCEwb"
>
  <div
    className="sc-jdzWJC bpJEZY"
  >
    <div
      className="sc-iaUDOe eVEmEU"
    >
      <div
        className="sc-dOaiCS dYaHgA"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-jaIaHg bboIQW"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-fCdBJp qBpuG"
  >
    <span>
      <button
        className="sc-jmhOSl hTpouU"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Discard
        <div
          className="sc-dYtREw KOYqG"
        />
      </button>
    </span>
    <span>
      <button
        className="sc-jmhOSl ksePDH"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Confirm
        <div
          className="sc-dYtREw KOYqG"
        />
      </button>
    </span>
  </div>
</div>
`;

exports[`Banner renders in single line mode 1`] = `
<div
  className="sc-eCqeQn kxHCOc"
>
  <div
    className="sc-jdzWJC iRiyUF"
  >
    <div
      className="sc-jaIaHg fPMzME"
    >
      Your email is not verified. Verify to enable withdrawals.
    </div>
    <div
      className="sc-fCdBJp qBpuG"
    >
      <button
        className="sc-jmhOSl dhOGkz"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Resend verification link to email ›
        <div
          className="sc-dYtREw KOYqG"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Banner renders with buttons 1`] = `
<div
  className="sc-eCqeQn jEfDzC"
>
  <div
    className="sc-jdzWJC bpJEZY"
  >
    <div
      className="sc-iaUDOe eVEmEU"
    >
      <div
        className="sc-dOaiCS dYaHgA"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-jaIaHg bboIQW"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-fCdBJp qBpuG"
  >
    <span>
      <button
        className="sc-jmhOSl hTpouU"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Discard
        <div
          className="sc-dYtREw KOYqG"
        />
      </button>
    </span>
    <span>
      <button
        className="sc-jmhOSl ksePDH"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Confirm
        <div
          className="sc-dYtREw KOYqG"
        />
      </button>
    </span>
  </div>
</div>
`;

exports[`Banner renders with buttons RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="sc-eCqeQn jEfDzC"
  >
    <div
      className="sc-jdzWJC bpJEZY"
    >
      <div
        className="sc-iaUDOe eVEmEU"
      >
        <div
          className="sc-dOaiCS dYaHgA"
        >
          Title here
        </div>
      </div>
      <div
        className="sc-jaIaHg bboIQW"
      >
        Lorem ipsum dolor...
      </div>
    </div>
    <div
      className="sc-fCdBJp qBpuG"
    >
      <span>
        <button
          className="sc-jmhOSl hTpouU"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Discard
          <div
            className="sc-dYtREw KOYqG"
          />
        </button>
      </span>
      <span>
        <button
          className="sc-jmhOSl ksePDH"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Confirm
          <div
            className="sc-dYtREw KOYqG"
          />
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`Banner renders with header icon 1`] = `
<div
  className="sc-eCqeQn kxHCOc"
>
  <div
    className="sc-jdzWJC bpJEZY"
  >
    <div
      className="sc-iaUDOe eVEmEU"
    >
      <div
        className="sc-dOaiCS dYaHgA"
      >
        Title here
      </div>
      <div
        className="sc-jLFzpH eMQAwQ"
      >
        <svg
          className="sc-jgbSNz"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </div>
    </div>
    <div
      className="sc-jaIaHg bboIQW"
    >
      Lorem ipsum dolor...
    </div>
  </div>
</div>
`;
